[project]
name = "rpo"
dynamic = ["version"]
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
authors = [
  {name = "Cameron Lane", email = "crlane@adamanteus.com"},
]
maintainers = [
  {name = "Cameron Lane", email = "crlane@adamanteus.com"},
]
dependencies = [
    "altair[all]>=5.5.0",
    "click>=8.2.1",
    "gitpython>=3.1.44",
    "matplotlib>=3.10.3",
    "polars>=1.30.0",
    "pydantic>=2.11.5",
]

[dependency-groups]
dev = [
    "ipdb>=0.13.13",
    "pytest>=8.4.0",
    "pytest-cov>=6.1.1",
]

[project.urls]
Homepage = "https://github.com/crlane/rpo"
Documentation = "https://rpo.readthedocs.io/en/latest/"
Repsoitory = "https://github.com/crlane/rpo"
"Bug Tracker" = "https://github.com/crlane/rpo/issues"
Changelog = "https://github.com/crlane/rpo/blob/master/CHANGELOG.md"

[project.scripts]
rpo = 'rpo.main:cli'

[tool.pytest.ini_options]
addopts = "-v --cov-report=term-missing --cov-config .coveragerc"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as using live git repositories and/or network activity",
]


[build-system]
requires = [
    "hatchling",
    "wheel",
    "twine",
]
build-backend = "hatchling.build"


[tool.hatch.build.targets.wheel]
packages = ["src/rpo"]


[tool.hatch.version]
path = "src/rpo/__init__.py"



[tool.basedpyright]
reportUnreachable = 'hint'
reportUnusedParameter = 'hint'
reportUnusedCallResult = 'hint'
reportDeprecated = 'hint'
typeCheckingMode = 'strict'
